--- a/src/App.css
+++ b/src/App.css
@@ -45,5 +45,50 @@
     display: block;
 }
 
+/* ///////////////////////////////////////////////////////////////// */
+/* 
+.content .title{
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
+}
+
+.content .name{
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+}
+
+.content .des{
+    animation: animate 1s ease-in-out 0.9s 1 forwards;
+}
+
+.content .btn{
+    animation: animate 1s ease-in-out 1.2s 1 forwards;
+}
+
+@keyframes animate {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
+}
 
 
+
+.carousel .timeRunning{
+    animation: runningTime 7s linear 1 forwards;
+}
+
+@keyframes runningTime {
+    
+    from{width: 0%;}
+    to{width: 100%;}
+
+}
+
+ */
